Write some globals

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Hack Day 2017</title>
   
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css" integrity="sha256-NqI559iHqiWe5VxDi9mXE8i83ghn8Ru8BINyiPN7lDg=" crossorigin="anonymous" />
   <link href="css/stylesheet.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
@@ -11,7 +12,7 @@
 </head>
 <body>
   <div class="container-fluid">
-    
+
   </div>
 </body>
 </html>
