Html for first 3 sections

--- a/index.html
+++ b/index.html
@@ -11,8 +11,96 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.js" integrity="sha256-6Po73qUOfEfrvKtDy88HN0Xx6wjx3ZlngccJjsIVpIg=" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container-fluid">
+<div class="off-canvas-wrapper wrapper">
+  <div class="off-canvas-wrapper-inner wrapper--inner">
 
+    <!-- Hero section -->
+    <div class="row sd-hero">
+      <div class="small-12 sd-hero--content columns">
+        <img class="sd-hero--logo" src="" />
+        <h1 class="sd-hero--title">Hack Day</h1>
+        <h2 class="sd-hero--subtitle">
+          Qualcomm Room, Jacobs Hall<br>
+          January 13-14, 2017
+        </h2>
+        <a class="sd-button button">Apply</a>
+        <a class="sd-button button success">Volunteer</a>
+      </div>
+    </div>
+
+    <!-- First info section -->
+    <div class="sd-section">
+      <div class="row">
+        <div class="small-12 medium-8 columns sd-section">
+          <h2 class="sd-section--header">About</h2>
+          <p>
+            For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
+          </p>
+          <h3 class="sd-section--subheader">Where At?</h3>
+          <p>
+            This hack day will be held in the Qualcomm Room in Jacobs Hall
+          </p>
+        </div>
+        <div class="small-12 medium-4 columns sd-hextion">
+          <div class="hex">
+            <h1>1.2k</h1>
+            <p>Hackers</p>
+          </div>
+          <div class="sd-hextion--content">
+            <h1 class="sd-hextion--header">Last Year:</h1>
+            <p>
+              Last year, SD Hacks brought over 800 students from all over California to build great things.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Second (split content) info section -->
+    <div class="sd-section">
+      <div class="row sd-section">
+        <div class="small-12 columns">
+          <h1 class="sd-section--header">Resources</h1>
+        </div>
+        <div class="sd-section--tile medium-4 columns">
+          <div class="hex">
+            <h1>1.2k</h1>
+            <p>Hackers</p>
+          </div>
+          <div class="sd-section--tile-content">
+            <h3 class="sd-section--subheader">Virtual Reality</h3>
+            <p>
+              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+            </p>
+          </div>
+        </div>
+        <div class="sd-section--tile medium-4 columns">
+          <div class="hex">
+            <h1>1.2k</h1>
+            <p>Hackers</p>
+          </div>
+          <div class="sd-section--tile-content">
+            <h3 class="sd-section--subheader">Virtual Reality</h3>
+            <p>
+              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+            </p>
+          </div>
+        </div>
+        <div class="sd-section--tile medium-4 columns">
+          <div class="hex">
+            <h1>1.2k</h1>
+            <p>Hackers</p>
+          </div>
+          <div class="sd-section--tile-content">
+            <h3 class="sd-section--subheader">Virtual Reality</h3>
+            <p>
+              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 </body>
 </html>
