--- a/index.html
+++ b/index.html
@@ -11,105 +11,186 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.js" integrity="sha256-6Po73qUOfEfrvKtDy88HN0Xx6wjx3ZlngccJjsIVpIg=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="off-canvas-wrapper wrapper">
-  <div class="off-canvas-wrapper-inner wrapper--inner">
+  <div class="off-canvas-wrapper wrapper">
+    <div class="off-canvas-wrapper-inner wrapper--inner">
 
-    <!-- Hero section -->
-    <div class="row sd-hero">
-      <div class="small-12 sd-hero--content columns">
-        <img class="sd-hero--logo" src="" />
-        <h1 class="sd-hero--title">Hack Day</h1>
-        <h2 class="sd-hero--subtitle">
-          Qualcomm Room, Jacobs Hall<br>
-          January 13-14, 2017
-        </h2>
-        <a class="sd-button button">Apply</a>
-        <a class="sd-button button success">Volunteer</a>
-      </div>
-    </div>
-
-    <!-- First info section -->
-    <div class="sd-section">
-      <div class="row">
-        <div class="small-12 medium-8 columns sd-section">
-          <h2 class="sd-section--header">About</h2>
-          <p>
-            For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
-          </p>
-          <h3 class="sd-section--subheader">Where At?</h3>
-          <p>
-            This hack day will be held in the Qualcomm Room in Jacobs Hall
-          </p>
-        </div>
-        <div class="small-12 medium-4 columns sd-hextion">
-          <div class="hex">
-            <h1>1.2k</h1>
-            <p>Hackers</p>
-          </div>
-          <div class="sd-hextion--content">
-            <h1 class="sd-hextion--header">Last Year:</h1>
-            <p>
-              Last year, SD Hacks brought over 800 students from all over California to build great things.
-            </p>
-          </div>
+      <!-- Hero section -->
+      <div class="row sd-hero">
+        <div class="small-12 sd-hero--content columns">
+          <img class="sd-hero--logo" src="images/logo.png" />
+          <h1 class="sd-hero--title">Hack Day</h1>
+          <h2 class="sd-hero--subtitle">
+            Qualcomm Room, Jacobs Hall<br>
+            January 13-14, 2017
+          </h2>
+          <a class="sd-button button">Apply</a>
+          <a class="sd-button button success">Volunteer</a>
         </div>
       </div>
-    </div>
 
-    <!-- Second (split content) info section -->
-    <div class="sd-section">
-      <div class="row sd-section">
-        <div class="small-12 columns">
-          <h1 class="sd-section--header">Resources</h1>
-        </div>
-        <div class="sd-section--tile medium-4 columns">
-          <div class="hex">
-            <h1>1.2k</h1>
-            <p>Hackers</p>
-          </div>
-          <div class="sd-section--tile-content">
-            <h3 class="sd-section--subheader">Virtual Reality</h3>
+      <!-- First info section -->
+      <div class="sd-section">
+        <div class="row">
+          <div class="small-12 medium-8 columns sd-section">
+            <h2 class="sd-section--header">About</h2>
             <p>
-              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+              For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
+            </p>
+            <h3 class="sd-section--subheader">Where At?</h3>
+            <p>
+              This hack day will be held in the Qualcomm Room in Jacobs Hall
             </p>
           </div>
-        </div>
-        <div class="sd-section--tile medium-4 columns">
-          <div class="hex">
-            <h1>1.2k</h1>
-            <p>Hackers</p>
-          </div>
-          <div class="sd-section--tile-content">
-            <h3 class="sd-section--subheader">Virtual Reality</h3>
-            <p>
-              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
-            </p>
-          </div>
-        </div>
-        <div class="sd-section--tile medium-4 columns">
-          <div class="hex">
-            <h1>1.2k</h1>
-            <p>Hackers</p>
-          </div>
-          <div class="sd-section--tile-content">
-            <h3 class="sd-section--subheader">Virtual Reality</h3>
-            <p>
-              We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
-            </p>
+          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+            <div class="hex">
+              <h1>1.2k</h1>
+              <p>Hackers</p>
+            </div>
+            <div class="sd-hextion--content">
+              <h2 class="sd-hextion--header">Last Year:</h2>
+              <p>
+                Last year, SD Hacks brought over 800 students from all over California to build great things.
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- TODO: add the rest of the sections -->
+      <!-- Second (split content) info section -->
+      <div class="sd-section">
+        <div class="row sd-section">
+          <div class="small-12 columns">
+            <h2 class="sd-section--header">Resources</h2>
+          </div>
+          <div class="sd-section--tile medium-4 columns">
+            <div class="hex">
+              <h1>1.2k</h1>
+              <p>Hackers</p>
+            </div>
+            <div class="sd-section--tile-content">
+              <h3 class="sd-section--subheader">Virtual Reality</h3>
+              <p>
+                We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+              </p>
+            </div>
+          </div>
+          <div class="sd-section--tile medium-4 columns">
+            <div class="hex">
+              <h1>1.2k</h1>
+              <p>Hackers</p>
+            </div>
+            <div class="sd-section--tile-content">
+              <h3 class="sd-section--subheader">Virtual Reality</h3>
+              <p>
+                We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+              </p>
+            </div>
+          </div>
+          <div class="sd-section--tile medium-4 columns">
+            <div class="hex">
+              <h1>1.2k</h1>
+              <p>Hackers</p>
+            </div>
+            <div class="sd-section--tile-content">
+              <h3 class="sd-section--subheader">Virtual Reality</h3>
+              <p>
+                We will provide HTC Vives, Oculus Rifts, and VR-ready PC's for Virtual Reality developers!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <!-- Footer -->
-    <div class="sd-section sd-footer">
-      <div class="row">
-        
+      <!-- Schedule section -->
+      <div class="sd-section">
+        <div class="row">
+          <div class="small-12 medium-4 columns sd-hextion sd-hextion--left">
+            <div class="hex">
+              <h1>6</h1>
+              <p>Workshops</p>
+            </div>
+            <div class="sd-hextion--content">
+              <h1 class="sd-hextion--header">We'll hold workshops</h1>
+              <ul class="sd-list sd-hextion--list">
+                <li>HTML/CSS</li>
+                <li>NodeJS/Javascript</li>
+                <li>Data Science with Python</li>
+                <li>Intro to VR</li>
+                <li>iOS Workshop</li>
+                <li>Unity Workshop</li>
+              </ul>
+            </div>
+          </div>
+          <div class="small-12 medium-8 columns sd-section sd-schedule">
+            <h2 class="sd-section--header">Schedule</h2>
+            <h3 class="sd-section--subheader">Friday 1/13</h3>
+            <ul class="sd-list sd-schedule--list">
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+            </ul>
+            <h3 class="sd-section--subheader">Saturday 1/14</h3>
+            <ul class="sd-list sd-schedule--list">
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
+                Building a NodeJS App
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+
+      <!-- TODO: add the rest of the sections -->
+
+      <!-- Footer -->
+      <div class="sd-section sd-footer">
+        <div class="row">
+
+        </div>
       </div>
     </div>
   </div>
-</div>
 </body>
 </html>
