--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </p>
           </div>
           <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
-            <div class="hex">
-              <h1>1.2k</h1>
+            <div class="sd-hex">
+              <h2>1.2k</h2>
               <p>Hackers</p>
             </div>
             <div class="sd-hextion--content">
@@ -63,8 +63,8 @@
             <h2 class="sd-section--header">Resources</h2>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="hex">
-              <h1>1.2k</h1>
+            <div class="sd-hex sd-hex--unbordered">
+              <h2>1.2k</h2>
               <p>Hackers</p>
             </div>
             <div class="sd-section--tile-content">
@@ -75,8 +75,8 @@
             </div>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="hex">
-              <h1>1.2k</h1>
+            <div class="sd-hex sd-hex--unbordered">
+              <h2>1.2k</h2>
               <p>Hackers</p>
             </div>
             <div class="sd-section--tile-content">
@@ -87,8 +87,8 @@
             </div>
           </div>
           <div class="sd-section--tile medium-4 columns">
-            <div class="hex">
-              <h1>1.2k</h1>
+            <div class="sd-hex sd-hex--unbordered">
+              <h2>1.2k</h2>
               <p>Hackers</p>
             </div>
             <div class="sd-section--tile-content">
@@ -105,8 +105,8 @@
       <div class="sd-section">
         <div class="row">
           <div class="small-12 medium-4 columns sd-hextion sd-hextion--left">
-            <div class="hex">
-              <h1>6</h1>
+            <div class="sd-hex">
+              <h2>6</h2>
               <p>Workshops</p>
             </div>
             <div class="sd-hextion--content">
@@ -178,17 +178,101 @@
               </li>
             </ul>
           </div>
-
         </div>
       </div>
 
-      <!-- TODO: add the rest of the sections -->
+      <!-- FAQ section -->
+      <div class="sd-section">
+        <div class="row">
+          <div class="small-12 medium-8 columns sd-section sd-schedule">
+            <h2 class="sd-section--header">FAQ</h2>
+            <ul class="sd-list sd-faq--list">
+              <li>
+                <h3 class="sd-section--subheader">Where At?</h3>
+                <p>
+                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                </p>
+              </li>
+              <li>
+                <h3 class="sd-section--subheader">Where At?</h3>
+                <p>
+                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                </p>
+              </li>
+              <li>
+                <h3 class="sd-section--subheader">Where At?</h3>
+                <p>
+                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                </p>
+              </li>
+              <li>
+                <h3 class="sd-section--subheader">Where At?</h3>
+                <p>
+                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                </p>
+              </li>
+            </ul>
+
+          </div>
+          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+            <div class="sd-hex">
+              <h2>??</h2>
+              <p>Volunteers</p>
+            </div>
+            <div class="sd-hextion--content">
+              <h2 class="sd-hextion--header">Wanna help out?</h2>
+              <p>
+                If you're interested in helping out or mentoring, click this button:
+              </p>
+              <a class="button sd-button success">Volunteer</a>
+
+              <h2 class="sd-hextion--header">Question not answered?</h2>
+              <p>
+                Please email us at
+                <a href="mailto:hello@sdhacks.io">hello@sdhacks.io</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Sponsors section -->
+      <div class="sd-section">
+        <div class="row">
+          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+            <div class="sd-hex">
+              <h2>SD<h2>
+              <p>Sponsor</p>
+            </div>
+            <div class="sd-hextion--content">
+              <h2 class="sd-hextion--header">Our partner sponsor</h2>
+              <p>
+                We're glad to have SD as our partner sponsor! Be sure to checek out their booth at ____
+              </p>
+              <h2 class="sd-hextion--header">Interested in sponsoring?
+              <a class="button sd-button" href="mailto:hello@sdhacks.io">Email us</a>
+            </div>
+          </div>
+          <div class="small-12 medium-8 columns sd-section sd-schedule">
+            <h2 class="sd-section--header">Sponsors</h2>
+            <ul class="sd-list sd-sponsor--list">
+              <!-- TODO: add sponsors -->
+            </ul>
+          </div>
+        </div>
+      </div>
 
       <!-- Footer -->
       <div class="sd-section sd-footer">
-        <div class="row">
-
+        <div class="sd-footer--hex">
+          <img src="images/logo.png" />
         </div>
+        <div class="row">
+          <div class="">
+            <img class="tesc-logo" src="images/tesc_logo_white.png" />
+          </div>
+        </div>
+        <!-- TODO: add fontawesome icons -->
       </div>
     </div>
   </div>
