Added side hexagons and made edges

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- First info section -->
       <div class="sd-section">
         <div class="row">
-          <div class="small-12 medium-8 columns sd-section">
+          <div class="small-12 medium-7 columns sd-section">
             <h2 class="sd-section--header">About</h2>
             <p>
               For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
@@ -41,7 +41,7 @@
               This hack day will be held in the Qualcomm Room in Jacobs Hall
             </p>
           </div>
-          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+          <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex">
               <h2>1.2k</h2>
               <p>Hackers</p>
@@ -104,7 +104,7 @@
       <!-- Schedule section -->
       <div class="sd-section">
         <div class="row">
-          <div class="small-12 medium-4 columns sd-hextion sd-hextion--left">
+          <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex">
               <h2>6</h2>
               <p>Workshops</p>
@@ -121,7 +121,7 @@
               </ul>
             </div>
           </div>
-          <div class="small-12 medium-8 columns sd-section sd-schedule">
+          <div class="small-12 medium-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">Schedule</h2>
             <h3 class="sd-section--subheader">Friday 1/13</h3>
             <ul class="sd-list sd-schedule--list">
@@ -184,7 +184,7 @@
       <!-- FAQ section -->
       <div class="sd-section">
         <div class="row">
-          <div class="small-12 medium-8 columns sd-section sd-schedule">
+          <div class="small-12 medium-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">FAQ</h2>
             <ul class="sd-list sd-faq--list">
               <li>
@@ -214,7 +214,7 @@
             </ul>
 
           </div>
-          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+          <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex">
               <h2>??</h2>
               <p>Volunteers</p>
@@ -239,7 +239,7 @@
       <!-- Sponsors section -->
       <div class="sd-section">
         <div class="row">
-          <div class="small-12 medium-4 columns sd-hextion sd-hextion--right">
+          <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex">
               <h2>SD<h2>
               <p>Sponsor</p>
@@ -253,7 +253,7 @@
               <a class="button sd-button" href="mailto:hello@sdhacks.io">Email us</a>
             </div>
           </div>
-          <div class="small-12 medium-8 columns sd-section sd-schedule">
+          <div class="small-12 medium-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">Sponsors</h2>
             <ul class="sd-list sd-sponsor--list">
               <!-- TODO: add sponsors -->
@@ -263,13 +263,15 @@
       </div>
 
       <!-- Footer -->
-      <div class="sd-section sd-footer">
-        <div class="sd-footer--hex">
-          <img src="images/logo.png" />
-        </div>
-        <div class="row">
-          <div class="">
-            <img class="tesc-logo" src="images/tesc_logo_white.png" />
+      <div class="sd-section">
+        <div class="row sd-footer">
+          <div class="sd-footer--background"></div>
+          <div class="sd-footer--hex">
+          </div>
+          <div class="row">
+            <div class="small-12 medium-offset-9 medium-2 columns sd-footer--info">
+              <img class="tesc-logo" src="images/tesc_white.svg" />
+            </div>
           </div>
         </div>
         <!-- TODO: add fontawesome icons -->
