Added side borders

--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
     <div class="off-canvas-wrapper-inner wrapper--inner">
 
       <!-- Hero section -->
-      <div class="row sd-hero">
-        <div class="small-12 sd-hero--content columns">
-          <img class="sd-hero--logo" src="images/logo.png" />
-          <h1 class="sd-hero--title">Hack Day</h1>
-          <h2 class="sd-hero--subtitle">
-            Qualcomm Room, Jacobs Hall<br>
-            January 13-14, 2017
-          </h2>
-          <a class="sd-button button">Apply</a>
-          <a class="sd-button button success">Volunteer</a>
+      <div class="sd-section row sd-white-bg sd-hero--wrap">
+        <div class="sd-hero">
+          <div class="small-12 sd-hero--content columns">
+            <img class="sd-hero--logo" src="images/logo.png" />
+            <h1 class="sd-hero--title">Hack Day</h1>
+            <h2 class="sd-hero--subtitle">
+              Qualcomm Room, Jacobs Hall<br>
+              January 13-14, 2017
+            </h2>
+            <a class="sd-button button">Apply</a>
+            <a class="sd-button button success">Volunteer</a>
+          </div>
         </div>
       </div>
 
       <!-- First info section -->
       <div class="sd-section">
-        <div class="row">
+        <div class="row sd-white-bg">
           <div class="small-12 medium-7 columns sd-section">
             <h2 class="sd-section--header">About</h2>
             <p>
@@ -42,7 +44,7 @@
             </p>
           </div>
           <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
-            <div class="sd-hex">
+            <div class="sd-hex sd-hex--inset">
               <h2>1.2k</h2>
               <p>Hackers</p>
             </div>
@@ -58,7 +60,7 @@
 
       <!-- Second (split content) info section -->
       <div class="sd-section">
-        <div class="row sd-section">
+        <div class="row sd-white-bg">
           <div class="small-12 columns">
             <h2 class="sd-section--header">Resources</h2>
           </div>
@@ -103,9 +105,9 @@
 
       <!-- Schedule section -->
       <div class="sd-section">
-        <div class="row">
+        <div class="row sd-white-bg">
           <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
-            <div class="sd-hex">
+            <div class="sd-hex sd-hex--inset">
               <h2>6</h2>
               <p>Workshops</p>
             </div>
@@ -183,7 +185,7 @@
 
       <!-- FAQ section -->
       <div class="sd-section">
-        <div class="row">
+        <div class="row sd-white-bg">
           <div class="small-12 medium-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">FAQ</h2>
             <ul class="sd-list sd-faq--list">
@@ -215,7 +217,7 @@
 
           </div>
           <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
-            <div class="sd-hex">
+            <div class="sd-hex sd-hex--inset">
               <h2>??</h2>
               <p>Volunteers</p>
             </div>
@@ -238,9 +240,9 @@
 
       <!-- Sponsors section -->
       <div class="sd-section">
-        <div class="row">
+        <div class="row sd-white-bg">
           <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
-            <div class="sd-hex">
+            <div class="sd-hex sd-hex--inset">
               <h2>SD<h2>
               <p>Sponsor</p>
             </div>
@@ -266,12 +268,10 @@
       <div class="sd-section">
         <div class="row sd-footer">
           <div class="sd-footer--background"></div>
-          <div class="sd-footer--hex">
-          </div>
-          <div class="row">
-            <div class="small-12 medium-offset-9 medium-2 columns sd-footer--info">
-              <img class="tesc-logo" src="images/tesc_white.svg" />
-            </div>
+          <div class="sd-footer--hex"></div>
+          <div class="sd-footer--background-helper"></div>
+          <div class="small-12 medium-offset-9 medium-2 columns sd-footer--info">
+            <img class="tesc-logo" src="images/tesc_white.svg" />
           </div>
         </div>
         <!-- TODO: add fontawesome icons -->
