--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- First info section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
-          <div class="small-12 medium-7 columns sd-section">
+          <div class="small-12 medium-6 large-7 columns sd-section">
             <h2 class="sd-section--header">About</h2>
             <p>
               For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
@@ -43,7 +43,7 @@
               This hack day will be held in the Qualcomm Room in Jacobs Hall
             </p>
           </div>
-          <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
+          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex sd-hex--inset">
               <h2>1.2k</h2>
               <p>Hackers</p>
@@ -106,7 +106,7 @@
       <!-- Schedule section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
-          <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
+          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
               <h2>6</h2>
               <p>Workshops</p>
@@ -123,7 +123,7 @@
               </ul>
             </div>
           </div>
-          <div class="small-12 medium-7 columns sd-section sd-schedule">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">Schedule</h2>
             <h3 class="sd-section--subheader">Friday 1/13</h3>
             <ul class="sd-list sd-schedule--list">
@@ -186,7 +186,7 @@
       <!-- FAQ section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
-          <div class="small-12 medium-7 columns sd-section sd-schedule">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">FAQ</h2>
             <ul class="sd-list sd-faq--list">
               <li>
@@ -216,7 +216,7 @@
             </ul>
 
           </div>
-          <div class="small-12 medium-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
+          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex sd-hex--inset">
               <h2>??</h2>
               <p>Volunteers</p>
@@ -241,7 +241,7 @@
       <!-- Sponsors section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
-          <div class="small-12 medium-5 columns sd-hextion sd-hextion--left">
+          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
               <h2>SD<h2>
               <p>Sponsor</p>
@@ -255,7 +255,7 @@
               <a class="button sd-button" href="mailto:hello@sdhacks.io">Email us</a>
             </div>
           </div>
-          <div class="small-12 medium-7 columns sd-section sd-schedule">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">Sponsors</h2>
             <ul class="sd-list sd-sponsor--list">
               <!-- TODO: add sponsors -->
