Add schedule content

--- a/index.html
+++ b/index.html
@@ -128,55 +128,47 @@
             <h3 class="sd-section--subheader">Friday 1/13</h3>
             <ul class="sd-list sd-schedule--list">
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">5:00 - 5:30 PM</span>
+                <span class="sd-schedule--list-content">Sign In</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">5:00 - 6:00 PM</span>
+                <span class="sd-schedule--list-content">Dinner</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">5:30 - 6:00 PM</span>
+                <span class="sd-schedule--list-content">Opening Ceremony</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">6:00 PM</span>
+                <span class="sd-schedule--list-content">Start Hacking</span>
+              </li>
+              <li>
+                <span class="sd-schedule--list-time">6:00 - 8:00 PM</span>
+                <span class="sd-schedule--list-content">Web Development Workshop</span>
               </li>
             </ul>
             <h3 class="sd-section--subheader">Saturday 1/14</h3>
             <ul class="sd-list sd-schedule--list">
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">9:00 - 10:00 AM</span>
+                <span class="sd-schedule--list-content">Breakfast</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">12:00 - 1:00 PM</span>
+                <span class="sd-schedule--list-content">Lunch</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">5:00 PM</span>
+                <span class="sd-schedule--list-content">Hacking Ends</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">5:00 - 6:00 PM</span>
+                <span class="sd-schedule--list-content">Demos</span>
               </li>
               <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
-              </li>
-              <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
-              </li>
-              <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
-              </li>
-              <li>
-                <span class="sd-schedule--list-time">9:30 - 11:30 PM</span>
-                Building a NodeJS App
+                <span class="sd-schedule--list-time">6:00 - 6:15 PM</span>
+                <span class="sd-schedule--list-content">Closing Ceremony</span>
               </li>
             </ul>
           </div>
@@ -238,8 +230,13 @@
         </div>
       </div>
 
+      <!-- Replaces sponsor section -->
+      <div class="sd-section row">
+        <div class="sd-spacer--footer sd-white-bg"></div>
+      </div>
+
       <!-- Sponsors section -->
-      <div class="sd-section">
+<!--       <div class="sd-section">
         <div class="row sd-white-bg">
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--left">
             <div class="sd-hex sd-hex--inset">
@@ -258,11 +255,10 @@
           <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
             <h2 class="sd-section--header">Sponsors</h2>
             <ul class="sd-list sd-sponsor--list">
-              <!-- TODO: add sponsors -->
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Footer -->
       <div class="sd-section">
