--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
     <div class="off-canvas-wrapper-inner wrapper--inner">
 
       <!-- Hero section -->
-      <div class="sd-section row sd-white-bg sd-hero--wrap">
-        <div class="sd-hero">
-          <div class="small-12 sd-hero--content columns">
-            <img class="sd-hero--logo" src="images/logo.png" />
-            <h1 class="sd-hero--title">Hack Day</h1>
-            <h2 class="sd-hero--subtitle">
-              Qualcomm Room, Jacobs Hall<br>
-              January 13-14, 2017
-            </h2>
-            <a class="sd-button button">Apply</a>
-            <a class="sd-button button success">Volunteer</a>
+      <div class="sd-section sd-hero--wrap">
+        <div class="sd-white-bg row">
+          <div class="sd-hero ">
+            <div class="small-12 sd-hero--content columns">
+              <img class="sd-hero--logo" src="images/logo.png" />
+              <h1 class="sd-hero--title">Hack Day</h1>
+              <h2 class="sd-hero--subtitle">
+                Qualcomm Room, Jacobs Hall<br>
+                January 13-14, 2017
+              </h2>
+              <a class="sd-button button">Apply</a>
+              <a class="sd-button button success">Volunteer</a>
+            </div>
           </div>
         </div>
       </div>
