Fixed some margin/padding issues

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 <body>
   <div class="off-canvas-wrapper wrapper">
     <div class="off-canvas-wrapper-inner wrapper--inner">
+      <!-- TODO: add fixed nav bar -->
 
       <!-- Hero section -->
       <div class="sd-section sd-hero--wrap">
+        <!-- TODO: add static nav bar -->
         <div class="sd-white-bg row">
           <div class="sd-hero ">
             <div class="small-12 sd-hero--content columns">
@@ -33,9 +35,9 @@
       </div>
 
       <!-- First info section -->
-      <div class="sd-section">
-        <div class="row sd-white-bg">
-          <div class="small-12 medium-6 large-7 columns sd-section">
+      <div class="sd-section sd-z1">
+        <div class="row sd-white-bg sd-pad-top">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-section--content">
             <h2 class="sd-section--header">About</h2>
             <p>
               For one weekend every year, SD Hacks turns San Diego into the hack capital of the world. This year, SD Hacks is going to bring you the dankest experience. It's time to build that cool application, robot, or whatever you've always wanted to build.
@@ -47,7 +49,7 @@
           </div>
           <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
             <div class="sd-hex sd-hex--inset">
-              <h2>1.2k</h2>
+              <h2>800</h2>
               <p>Hackers</p>
             </div>
             <div class="sd-hextion--content">
@@ -125,7 +127,7 @@
               </ul>
             </div>
           </div>
-          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule sd-section--content">
             <h2 class="sd-section--header">Schedule</h2>
             <h3 class="sd-section--subheader">Friday 1/13</h3>
             <ul class="sd-list sd-schedule--list">
@@ -180,37 +182,37 @@
       <!-- FAQ section -->
       <div class="sd-section">
         <div class="row sd-white-bg">
-          <div class="small-12 medium-6 large-7 columns sd-section sd-schedule">
+          <div class="small-12 medium-6 large-7 columns sd-section sd-section--content">
             <h2 class="sd-section--header">FAQ</h2>
             <ul class="sd-list sd-faq--list">
               <li>
-                <h3 class="sd-section--subheader">Where At?</h3>
+                <h3 class="sd-section--subheader">What's Hack Day?</h3>
                 <p>
-                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                  Hack day is a smaller, 24-hour UCSD only hackathon hosted by SD Hacks focused on mentorship, learning, and shipping cool projects.
                 </p>
               </li>
               <li>
-                <h3 class="sd-section--subheader">Where At?</h3>
+                <h3 class="sd-section--subheader">Where and When?</h3>
                 <p>
-                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall. Plan on arriving at 5:00 PM Friday and departing 6:30 PM Saturday. 
                 </p>
               </li>
               <li>
-                <h3 class="sd-section--subheader">Where At?</h3>
+                <h3 class="sd-section--subheader">What should I bring?</h3>
                 <p>
-                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                  Bring your student ID, computer, any external peripherals you may need (chargers, monitors, etc.), any other hardware that you definitely plan on using, and an open mind. 
                 </p>
               </li>
               <li>
-                <h3 class="sd-section--subheader">Where At?</h3>
+                <h3 class="sd-section--subheader">What if I don't have a team?</h3>
                 <p>
-                  This Hack Day will be held in the Qualcomm Room in Jacobs Hall
+                  We allow teams of up to four hackers. Though we recommend signing up with your team, don't worry if you don't have one set because we'll have a team formation session in the beginning!
                 </p>
               </li>
             </ul>
 
           </div>
-          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right sd-hextion--shifted">
+          <div class="small-12 medium-6 large-5 columns sd-hextion sd-hextion--right">
             <div class="sd-hex sd-hex--inset">
               <h2>??</h2>
               <p>Volunteers</p>
