--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a href="#resources"><li>Resources</li></a>
           <a href="#schedule"><li>Schedule</li></a>
           <a href="#faq"><li>FAQ</li></a>
-          <li><a href="" class="sd-button button">Apply</a></li>
+          <li class="sd-nav--cta"><a href="" class="sd-button button">Apply</a></li>
         </ul>
       </div> -->
 
@@ -31,7 +31,7 @@
           <a href="#resources"><li>Resources</li></a>
           <a href="#schedule"><li>Schedule</li></a>
           <a href="#faq"><li>FAQ</li></a>
-          <li><a href="" class="sd-button button">Apply</a></li>
+          <li class="sd-nav--cta"><a href="" class="sd-button button">Apply</a></li>
         </ul>
       </div>
 
@@ -243,9 +243,9 @@
               </p>
               <a class="button sd-button success">Volunteer</a>
 
-              <h2 class="sd-hextion--header">Question not answered?</h2>
+              <h2 class="sd-hextion--header">Question unanswered?</h2>
               <p>
-                Please email us at
+                Reach us at
                 <a href="mailto:hello@sdhacks.io">hello@sdhacks.io</a>
               </p>
             </div>
@@ -288,6 +288,12 @@
         <div class="row sd-footer">
           <div class="sd-footer--background"></div>
           <div class="sd-footer--hex"></div>
+          <div class="sd-footer--links">
+            <ul class="sd-footer--list">
+              <li><a>Facebook</a></li>
+              <li><a>Twitter</a></li>
+            </ul>
+          </div>
           <div class="sd-footer--background-helper"></div>
           <div class="small-12 medium-offset-6 medium-4 columns sd-footer--info">
             <img class="tesc-logo" src="images/tesc_white.svg" />
